Create navigation button to slide the carousel basic on the length of items in the it and the step to scroll by, and add buttons styles

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -12,3 +12,29 @@
 }
 
 .carousel__item {}
+
+.carousel__next, .carousel__prev {
+	position: absolute;
+	width: 40px;
+	height: 40px;
+	background: #FFF url(right.svg) center center no-repeat;
+	background-size: 20px 20px;
+	border-radius: 50%;
+	top: 50%;
+	margin-top: -20px;
+	right: 0px;
+	box-shadow: 0 15px 35px #3232321A, 0 5px 15px #0000001A;
+	cursor: pointer;
+	transition: transform .3s, opacity .3s;
+}
+
+.carousel__next:hover, .carousel__prev:hover {
+	transform: scale(1.2);
+}
+
+.carousel__prev {
+	background: #FFF url(left.svg) center center no-repeat;
+	background-size: 20px 20px;
+	right: auto;
+	left: -20px;
+}
