--- a/src/css/main.css
+++ b/src/css/main.css
@@ -17,7 +17,7 @@
 	position: absolute;
 	width: 40px;
 	height: 40px;
-	background: #FFF url(right.svg) center center no-repeat;
+	background: #FFF url(../svg/right.svg) center center no-repeat;
 	background-size: 20px 20px;
 	border-radius: 50%;
 	top: 50%;
@@ -33,7 +33,7 @@
 }
 
 .carousel__prev {
-	background: #FFF url(left.svg) center center no-repeat;
+	background: #FFF url(../svg/left.svg) center center no-repeat;
 	background-size: 20px 20px;
 	right: auto;
 	left: -20px;
